syntax = "proto3";

package golem.mcp;

import "golem/common/environment.proto";
import "golem/common/account_id.proto";

message AgentTypeImplementer {
  string component_id = 1;
  int64 component_revision = 2;
}

message CompiledMcp {
  golem.common.AccountId account_id = 1;
  golem.common.EnvironmentId environment_id = 2;
  uint64 deployment_revision = 3;
  string domain = 4;
  map<string, AgentTypeImplementer> agent_type_implementers = 5;
}
